[gd_scene load_steps=5 format=3 uid="uid://bc1s3vefss16r"]

[ext_resource type="PackedScene" uid="uid://d2gs3bu085iiv" path="res://game_scenes/scene_handler_text/floating_text/floating_label.tscn" id="1_75ln0"]
[ext_resource type="Script" path="res://game_scenes/scene_handler_text/floating_text.gd" id="1_haon4"]
[ext_resource type="Shader" path="res://game_scenes/background/ghost.gdshader" id="1_v555l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4t5kk"]
shader = ExtResource("1_v555l")
shader_parameter/shaking = true
shader_parameter/amplitude = 3.0
shader_parameter/noise_scale = 1.0
shader_parameter/noise_speed = 1.0
shader_parameter/opacity = 0.6
shader_parameter/saturation = 1.5

[node name="FloatingText" type="Node2D"]
material = SubResource("ShaderMaterial_4t5kk")
script = ExtResource("1_haon4")

[node name="FloatingLabel1" parent="." instance=ExtResource("1_75ln0")]
custom_minimum_size = Vector2(200, 60)
offset_left = 500.0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 250.0

[node name="FloatingLabel2" parent="." instance=ExtResource("1_75ln0")]
offset_left = 900.0
offset_top = 150.0
offset_right = 1200.0
offset_bottom = 350.0

[node name="FloatingLabel3" parent="." instance=ExtResource("1_75ln0")]
offset_left = 500.0
offset_top = 260.0
offset_right = 800.0
offset_bottom = 460.0

[node name="FloatingLabel4" parent="." instance=ExtResource("1_75ln0")]
offset_left = 100.0
offset_top = 150.0
offset_right = 400.0
offset_bottom = 350.0
